# CompetitiveProgramming

./: CMakeLists.txt  README.md
AC/: absolute_zero.cpp  acm.cpp  all_different_directions.py  alphabet.cpp  another_candies.cpp  are_you_listen.cpp  ball_bearings.cpp  big_boxes.cpp  bigboxes.cpp  billard.cpp  bootstrapping_number.cpp  bracket_matching.cpp  bridges_and_tunnels.cpp  bryr.cpp  building_highways.cpp  buildingpyraminds.cpp  bungee_builder.cpp  bus_numbers.cpp  button_bashing.cpp  cheating_students.cpp  circle_perimeter.cpp  circular_lock.cpp  circumsphere.cpp  colored_portals.cpp  compositions.cpp  cookingwater.cpp  costume_contest.cpp  curse_the_dark.cpp  d_function.cpp  das_lights.cpp  daylight_saving_time.cpp  dfa.cpp  dist_to_port.cpp  divisor_counts.cpp  dobra.cpp  driving_range.cpp  dvaput.cpp  ecr.cpp  eight_queens.cpp  elementary_math.cpp  (+72 more)
Competitions/10-13-2024/: a6.cpp  b6.cpp  c6.cpp
Competitions/10-14-2024/: a7.cpp  b7.cpp  c7.cpp  d7.cpp
Competitions/10-19-2024/: a8.cpp  b8.cpp  c8.cpp  d8.cpp  e8.cpp
Competitions/11-2-2024/: a9.cpp  b9.cpp  c9.cpp  d9.cpp
Competitions/11-3-2024/: a10.cpp  b10.cpp  c10.cpp
Competitions/11-8-2024/: a11.cpp  b11.cpp
Competitions/12-20-24/: a12.cpp  b12.cpp  c12.cpp
Competitions/2025-08-29/: a20.cpp
Competitions/2025-09-13/: a21.cpp  b21.cpp  c21.cpp  d21.cpp  e21.cpp  f21.cpp
Competitions/2025-10-06/: a22.cpp  b22.cpp  c22.cpp
Competitions/2026-01-25/: a.cpp  b.cpp  c.cpp  d.cpp
Competitions/3-10-2025/: a13.cpp  b13.cpp  c13.cpp
Competitions/3-11-2025/: a14.cpp  b14.cpp  c14.cpp  d14.cpp
Competitions/4-21-2025/: a14.cpp  b14.cpp  c14.cpp  d15.cpp  e15.cpp
Competitions/6-27-2024/: problem1.cpp  problem2.cpp  problem3.cpp
Competitions/6-30-2024/: a1.cpp  b1.cpp
Competitions/7-18-2024/: a2.cpp  b2.cpp
Competitions/7-23-2024/: a3.cpp  b3.cpp
Competitions/8-25-2025/: hamid.cpp  mix_mex_max.cpp
Competitions/9-27-2024/: a5.cpp  b5.cpp
Competitions/Calico/: class.cpp  grid_fill.cpp  grid_fill_2.cpp
Competitions/Lucid/: dance_competition.cpp  trampoline_triumph.cpp  tug_of_war.cpp
Competitions/LucidUpsolve/: dynasty_dates.py  racing_against_time.py  sorcerer_sanctoms.py  temporal_triangulation.py  time_table.cpp  time_warping_turtle.py  timeline_trouble.py
Competitions/MetaHackerCup/: mhc1.cpp  mhc2.cpp  mhc3.cpp  mhc6.cpp
Competitions/NorthAmericanQualifier/: bikes_and_barricades.cpp  call_for_problems.cpp  dishonest_lottery.cpp  ellipse_eclipse.cpp  gears_and_axles.cpp  light_up.cpp  rhythm_flow.cpp
Workshop/: MaximumSum.cpp  antenna_placement.cpp  arctic_network.cpp  beautiful_array.cpp  bomb.cpp  bottles.cpp  breaking_bad.cpp  candy_dist.cpp  card_game.cpp  courses.cpp  elections.cpp  equal_sums.cpp  even_positions.cpp  firefly_queries.cpp  hopscotch.cpp  join_strings.cpp  just_for_sidekicks.cpp  knapsack.cpp  loopycabdrivers.cpp  lost_in_translation.cpp  marble_tree.cpp  martian_dna.cpp  min_cut.cpp  minimizing_the_sum.cpp  modular_arithmatic.cpp  modular_arithmatic.py  nikola.cpp  orray.cpp  paintings.cpp  permutation_counting.cpp  pizza_profit.cpp  psort.cpp  rainbow_road.cpp  segment_tree.cpp  slots.cpp  stats_problem.cpp  string_multimatching.cpp  sums.cpp  template.cpp  texas_summers.cpp  (+2 more)
lib/: combo.cpp  condensation_graph.cpp  dijkstras.cpp  dsu.cpp  fenwick_tree.cpp  knapsack.cpp  mat_mul.cpp  max_flow.cpp  maximum_matching.cpp  mst.cpp  number_theory.cpp  points.cpp  strongly_connected_components.cpp  suffix_array.cpp  toposort.cpp
