cmake_minimum_required(VERSION 3.28)
project(CodeForces)

set(CMAKE_CXX_STANDARD 20)

add_executable(CodeForces AC/final_boss.cpp
        AC/d_function.cpp
        AC/magnitude_easy.cpp
        Workshop/elections.cpp
        AC/find_the_car.cpp
        Workshop/permutation_counting.cpp
        Workshop/minimizing_the_sum.cpp
        Competitions/6-27-2024/problem1.cpp
        Competitions/6-27-2024/problem2.cpp
        Competitions/6-27-2024/problem3.cpp
        Workshop/beautiful_array.cpp
        Competitions/6-30-2024/a1.cpp
        Competitions/6-30-2024/b1.cpp
        AC/circle_perimeter.cpp
        AC/k_bridges.cpp
        AC/ticket_hoarding.cpp
        Workshop/psort.cpp
        Competitions/7-18-2024/a2.cpp
        Competitions/7-18-2024/b2.cpp
        AC/final_countdown.cpp
        Workshop/card_game.cpp
        AC/everything_nim.cpp
        Competitions/7-23-2024/a3.cpp
        Competitions/7-23-2024/b3.cpp
        AC/milena_and_admirer.cpp
        AC/sheldon_and_ice_pieces.cpp
        Workshop/orray.cpp
        Workshop/even_positions.cpp
        AC/photoshoot_for_gorillas.cpp
        AC/ruler.cpp
        AC/expected_median.cpp
        AC/absolute_zero.cpp
        AC/colored_portals.cpp
        AC/guess_the_tree.cpp
        AC/fun.cpp
        Workshop/bomb.cpp
        Workshop/stats_problem.cpp
        Workshop/firefly_queries.cpp
        Competitions/9-27-2024/a5.cpp
        Competitions/9-27-2024/b5.cpp
        AC/bigboxes.cpp
        AC/need_for_speed.cpp
        Workshop/martian_dna.cpp
        Competitions/NorthAmericanQualifier/bikes_and_barricades.cpp
        Competitions/NorthAmericanQualifier/call_for_problems.cpp
        Competitions/NorthAmericanQualifier/dishonest_lottery.cpp
        Competitions/NorthAmericanQualifier/rhythm_flow.cpp
        Competitions/NorthAmericanQualifier/gears_and_axles.cpp
        Competitions/NorthAmericanQualifier/light_up.cpp
        Competitions/NorthAmericanQualifier/ellipse_eclipse.cpp
        Workshop/breaking_bad.cpp
        Competitions/10-13-2024/a6.cpp
        Competitions/10-13-2024/b6.cpp
        Competitions/10-13-2024/c6.cpp
        Competitions/10-14-2024/a7.cpp
        Competitions/10-14-2024/b7.cpp
        Competitions/10-14-2024/c7.cpp
        Competitions/10-14-2024/d7.cpp
        Competitions/10-19-2024/a8.cpp
        Competitions/10-19-2024/b8.cpp
        Competitions/10-19-2024/c8.cpp
        Competitions/10-19-2024/d8.cpp
        Competitions/10-19-2024/e8.cpp
        AC/tri_tiling.cpp
        Competitions/Lucid/trampoline_triumph.cpp
        Competitions/Lucid/tug_of_war.cpp
        Competitions/Lucid/dance_competition.cpp
        AC/circumsphere.cpp
        AC/billard.cpp
        Competitions/11-2-2024/a9.cpp
        Competitions/11-2-2024/b9.cpp
        Competitions/11-2-2024/c9.cpp
        Competitions/11-2-2024/d9.cpp
        Competitions/11-3-2024/a10.cpp
        Competitions/11-3-2024/b10.cpp
        Competitions/11-3-2024/c10.cpp
        AC/rudolf_and_imbalance.cpp
        AC/field_trip.cpp
        Competitions/11-8-2024/a11.cpp
        Competitions/11-8-2024/b11.cpp
        lib/knapsack.cpp
        Workshop/knapsack.cpp
        AC/bungee_builder.cpp
        Workshop/segment_tree.cpp
        AC/bracket_matching.cpp
        AC/smallest_calculated_value.cpp
        AC/dobra.cpp
        Workshop/lost_in_translation.cpp
        Competitions/12-20-24/a12.cpp
        Competitions/12-20-24/b12.cpp
        Competitions/12-20-24/c12.cpp
        AC/safehouses.cpp
        AC/okvir.cpp
        AC/cookingwater.cpp
        AC/buildingpyraminds.cpp
        AC/island_hopping.cpp
        AC/driving_range.cpp
        Workshop/marble_tree.cpp
        AC/interplanetary_tunnels.cpp
        AC/zoning.cpp
        AC/the_plank.cpp
        AC/gourmet.cpp
        AC/compositions.cpp
        AC/frustrated_queue.cpp
        Workshop/template.cpp
        AC/longest_increasing_subsequence.cpp
        AC/alphabet.cpp
        Workshop/volume_amplification.cpp
        Workshop/hopscotch.cpp
        Workshop/texas_summers.cpp
        Competitions/3-10-2025/a13.cpp
        Competitions/3-10-2025/b13.cpp
        Competitions/3-10-2025/c13.cpp
        Competitions/3-11-2025/a14.cpp
        Competitions/3-11-2025/b14.cpp
        Competitions/3-11-2025/c14.cpp
        Competitions/3-11-2025/d14.cpp
        Workshop/loopycabdrivers.cpp
        Workshop/join_strings.cpp
        AC/joint_jog_jam.cpp
        AC/are_you_listen.cpp
        AC/santa_klas.cpp
        AC/sticky_situation.cpp
        Workshop/slots.cpp
        Competitions/4-21-2025/a14.cpp
        Competitions/4-21-2025/b14.cpp
        Competitions/4-21-2025/c14.cpp
        Competitions/4-21-2025/d15.cpp
        Competitions/4-21-2025/e15.cpp
        AC/pathless.cpp
        AC/restaurant_opening.cpp
        AC/acm.cpp
        AC/button_bashing.cpp
        AC/curse_the_dark.cpp
        Competitions/8-25-2025/mix_mex_max.cpp
        Competitions/8-25-2025/hamid.cpp
        Competitions/2025-08-29/a20.cpp
        AC/inflation.cpp
        AC/bus_numbers.cpp
        AC/bootstrapping_number.cpp
        AC/big_boxes.cpp
        AC/massive_card_game.cpp
        AC/guess_number.cpp
        Workshop/bottles.cpp
        Competitions/2025-09-13/a21.cpp
        Competitions/2025-09-13/b21.cpp
        Competitions/2025-09-13/c21.cpp
        Competitions/2025-09-13/d21.cpp
        Competitions/2025-09-13/e21.cpp
        Competitions/2025-09-13/f21.cpp
        Workshop/sums.cpp
        AC/repeating_decimal.cpp
)
